--- a/Controler/todo.txt
+++ b/Controler/todo.txt
@@ -10,7 +10,7 @@ GUI desktop setup:
 
 	4.Starts and stops the Server[Linux Part Done || Windows not yet]
 
-	
+	5.Remove read stream for documents 
 	#addition
 	
 	1.Link the DirSort tool to this sucker[Pending]
